--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ twitter_username: IrlNoko
 github_username:  Noko32
 
 # Build settings
-theme: jekyll-theme-console
+remote_theme: b2a3e8/jekyll-theme-console
 plugins:
   - jekyll-feed
 
